methods.slug.SlugTracking.scala.error
Erreur de compilation :
SlugTracking:4: error: not found: value &&
    if (getCouleurSol()==Color.green) && (!estFaceMur){
                                      ^